--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="scoreApp">
+<html ng-app="gordonApp">
 
 <head lang="en">
     <meta charset="UTF-8">
@@ -7,9 +7,11 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
     <script src="controllers.js"></script>
-    <script src="bower_components/swfobject/swfobject/swfobject.js"></script>
+    <script src="face.js"></script>
+    <script src="mouth/mouth.directive.js"></script>
 </head>
 <div ng-controller="gordonCtrl">
+<mouth></mouth>
 
 
 </div>
