Isolate scope on directive.

--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
     <script src="mouth/mouth.directive.js"></script>
 </head>
 <div ng-controller="gordonCtrl">
-<mouth></mouth>
-
+<mouth sentence="top"></mouth>
+<mouth sentence="bottom"></mouth>
 
 </div>
 
