--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 
 <head lang="en">
     <meta charset="UTF-8">
-    <title>hello</title>
-
+    <title>Gordon</title>
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
-    <script type="text/javascript" src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="bower_components/ui-router/release/angular-ui-router.js"></script>
     <script src="app/controllers.js"></script>
     <script src="app/face.js"></script>
     <script src="app/mouth/mouth.directive.js"></script>
+    <script type="text/javascript" src="app/components/audio-service.js"></script>
+
 </head>
-<div ng-controller="gordonCtrl">
-    <div ui-view>
+<div ng-controller="gordonCtrl" class="container">
+    <div class="row jumbotron" ui-view>
+    </div>
+    <div class="row text-center">
+
+        <div class="input-group input-group-lg">
+            <span class="input-group-addon" id="sizing-addon1">@</span>
+            <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+        </div>
+
     </div>
 </div>
 
