Add directive for eyes.

--- a/app/main.html
+++ b/app/main.html
@@ -1,2 +1,4 @@
-<mouth sentence="top"></mouth>
-<mouth sentence="bottom"></mouth>
+<eye sentence="left"></eye>
+<eye sentence="right"></eye>
+
+<mouth sentence="word"></mouth>
