--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="app/controllers.js"></script>
     <script src="app/face.js"></script>
     <script src="app/mouth/mouth.directive.js"></script>
+    <script src="app/eye/eye.directive.js"></script>
     <script type="text/javascript" src="app/components/audio-service.js"></script>
 
 </head>
