Add basic divs for eyes and mouth

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Gordon</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/gordon.css">
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.js"></script>
@@ -13,7 +14,6 @@
     <script src="app/mouth/mouth.directive.js"></script>
     <script src="app/eye/eye.directive.js"></script>
     <script type="text/javascript" src="app/components/audio-service.js"></script>
-
 </head>
 <div ng-controller="gordonCtrl" class="container">
     <div class="row jumbotron" ui-view>
