--- a/app/main.html
+++ b/app/main.html
@@ -1,4 +1,17 @@
-<eye sentence="left"></eye>
-<eye sentence="right"></eye>
-
-<mouth sentence="word"></mouth>
+<div class="container">
+    <div class="row">
+    	<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"></div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 eye">
+        	<eye sentence="left"></eye>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 eye">
+        	<eye sentence="right"></eye>
+        </div>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"></div>
+    </div>
+    <div class="row">&nbsp;</div>
+    <div class="row mouth">
+        <mouth sentence="word"></mouth>
+    </div>
+</div>
