Move teeth to ngrepeat

--- a/app/mouth/mouth.directive.html
+++ b/app/mouth/mouth.directive.html
@@ -1,32 +1,7 @@
 <div id='{{isolatedSentence}}'>
-	<div class="row">
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
+	<div class="row" ng-repeat="row in teeth">
+		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth" ng-repeat="tooth in row">
 		&nbsp;
 		</div>
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;
-		</div>
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;</div>
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;</div>
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;</div>
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;</div>
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;</div>
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;</div>
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;</div>
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;</div>
-		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 tooth">
-		&nbsp;</div>
 	</div>
 </div>
